--- a/css/index.css
+++ b/css/index.css
@@ -16,8 +16,16 @@
   padding: 10px;
   font-family: 'Roboto';
 }
-.reviewText{
-
-
-
-  }
+.loadMoreButton{
+  width: 20%;
+  margin-left: 40%;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  font-size: 15px;
+  color: #444;
+  font-family: 'Roboto';
+  border-radius: 5px;
+  border-width: 1px;
+  border color: #999;
+  background-color: white;
+}
