offset the heading a bit more to align with the reviews

--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,7 @@
   border-bottom: 1px solid #aaa;
   width: 65%;
   margin-left: 17.5%;
-  padding: 10px;
+  padding: 10px 0px;
   font-family: 'Roboto';
 }
 .reviewDate{
