--- a/css/index.css
+++ b/css/index.css
@@ -26,15 +26,22 @@
 }
 
 .searchForm{
+  display: inline;
   float: right;
-  width: 25%;
+  width: 30%;
   margin-right: 21.5%;
   padding-right: 0;
 }
 
 .searchBox{
-  width: 100%;
+  width: 60%;
 }
+
+.submitButton{
+  float: right;
+  width: 30%;
+}
+
 .loadMoreButton{
   width: 20%;
   margin-left: 40%;
