added backend implementation of like button, and made like icon change color and disable the button on click. Refreshing the page still allows you to hit a like button again, or even just performing a search

--- a/css/index.css
+++ b/css/index.css
@@ -8,11 +8,15 @@
   display: flex;
 }
 
+.material-icons.indigo100{
+  color: #8C9EFF;
+}
+
 .material-icons.indigo500{
   color: #3F51B5;
 }
 
-.likes{
+.like-display{
   font-size: 15px;
   padding-top: 7px;
   margin-bottom: 0px;
